--- a/Server/configuration.json
+++ b/Server/configuration.json
@@ -1,5 +1,10 @@
 {
     "water-level-main-tank-maximum": 100,
-    "water-level-buffer-tank-minimum": 10
-
+    "water-level-buffer-tank-minimum": 10,
+    "water-level-buffer-tank-maximum": 50,
+    "time-on-pump-main-tank" : 3,
+    "time-off-pump-main-tank" : 6,
+    "time-valve-water-hold" : 2,
+    "time-valve-water-drain" : 4,
+    "tank-select-water-level" : 0
 }
