update state from raspberry pi

--- a/Server/configuration.json
+++ b/Server/configuration.json
@@ -2,11 +2,11 @@
     "water-level-main-tank-maximum": 100,
     "water-level-buffer-tank-minimum": 13,
     "water-level-buffer-tank-maximum": 37,
-    "time-on-pump-main-tank" : 900,
-    "time-off-pump-main-tank" : 900 ,
-    "time-valve-water-hold" : 800,
-    "time-valve-water-drain" : 900,
+    "time-on-pump-main-tank" : 30,
+    "time-off-pump-main-tank" : 60 ,
+    "time-valve-water-hold" : 10,
+    "time-valve-water-drain" : 60,
     "tank-select-water-level" : 0,
-    "hold-time-night-multiplier" : 3,
-    "alert-message" : "BIKE!!!"
+    "hold-time-night-multiplier" : 1,
+    "alert-message" : "BIKE-July14"
 }
