Working on pump control

--- a/Server/configuration.json
+++ b/Server/configuration.json
@@ -4,9 +4,9 @@
     "water-level-buffer-tank-maximum": 37,
     "time-on-pump-main-tank" : 600,
     "time-off-pump-main-tank" : 900,
-    "time-valve-water-hold" : 300,
+    "time-valve-water-hold" : 1200,
     "time-valve-water-drain" : 660,
     "tank-select-water-level" : 0,
     "hold-time-night-multiplier" : 1,
-    "alert-message" : "BIKE-July14"
+    "alert-message" : ""
 }
